--- a/checkout.html
+++ b/checkout.html
@@ -9,12 +9,16 @@
   <body>
     <div id="navbar">
       <h1>Checkout | Cost: 100/seat</h1>
+      <h1 id="wallet"></h1>
       <!-- Display the wallet amount here inside h1 tag with id as "wallet". Note only amount, no extra text. Like 500 not Rs 500 -->
     </div>
     <div id="user-detail">
       <!-- input field to accept user name with id as "user_name"  -->
       <!-- input field to accept number of seats with id as "number_of_seats"  -->
       <!-- A submit button to confirm booking with id as "confirm"  -->
+      <input type="text" id="user_name" placeholder="Enter Name">
+      <input type="text" id="number_of_seats" placeholder="Enter Number of Seats">
+      <input type="submit" id="confirm" onclick="bookMovieFunc()">
     </div>
 
     <div id="movie">
@@ -24,3 +28,5 @@
     </div>
   </body>
 </html>
+
+<script src="./scripts/checkout.js"></script>
