--- a/movies.html
+++ b/movies.html
@@ -5,15 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movies</title>
+    <style>
+      #movies
+      {
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: auto;
+      }
+    </style>
   </head>
+
   <body>
     <div id="navbar">
       <h1>Movie List</h1>
+      <h1 id="wallet"></h1>
       <!-- Display the wallet amount here inside h1 tag with id as "wallet". Note only amount, no extra text. Like 500 not Rs 500 -->
     </div>
     <div id="search_bar">
       <!-- input box for searching movies with id as "search" -->
       <!-- No button should be there for searching movies, it should search with input  -->
+      <input type="text" id="search" oninput="debounce(main,1000)">
     </div>
 
     <div id="movies">
@@ -23,3 +34,5 @@
     </div>
   </body>
 </html>
+
+<script src="./scripts/movies.js"></script>
